@@ -4,6 +4,7 @@
 - Fixed parsing bug with space before brackets on a call: *A = Something ()*
 - Fixed parsing bug with empty brackets on LHS of assignment: *A () = SomeFnReturningArray()*
 - Fixed issue with **"submit file"** button not being displayed when parsing failed
+- Fixed issue with label just before the Next from a For loop
 - Implemented solution for VB6 directives (#If #Else etc), by default assumes the If is true.
 
 **0.4.0.3**
